@@ -39,9 +39,9 @@ public:
     void OnSearchReplace(wxCommandEvent& event);
 	void OnKillFocus(wxFocusEvent& event);
 
-    void Find(const wxString &find, bool wholeWord, bool matchCase, bool useRegexps, bool startAtTop, bool reverse);
-    void Replace(const wxString &find, const wxString &replace, bool wholeWord, bool matchCase, bool useRegexps, bool startAtTop, bool reverse);
-    void ReplaceAll(const wxString &find, const wxString &replace, bool wholeWord, bool matchCase, bool useRegexps);
+    bool Find(const wxString &find, bool wholeWord, bool matchCase, bool useRegexps, bool startAtTop, bool reverse);
+    bool Replace(const wxString &find, const wxString &replace, bool wholeWord, bool matchCase, bool useRegexps, bool startAtTop, bool reverse);
+    bool ReplaceAll(const wxString &find, const wxString &replace, bool wholeWord, bool matchCase, bool useRegexps);
     bool DoFind(const wxString &find, const wxString &replace, bool doReplace, bool wholeWord, bool matchCase, bool useRegexps, bool startAtTop, bool reverse);
     
     DECLARE_DYNAMIC_CLASS(ctlSQLBox)
@@ -53,9 +53,6 @@ private:
 
     dlgFindReplace* m_dlgFindReplace;
 	pgConn *m_database;
-    wxString lastFindString;
-    int lastFindPos;
-	
 };
 
 
