@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-11-16 DP  1.6.1  Rework the Find/Replace code to fix a couple of minor 
+                      bugs and improve readability.
 2006-11-16 DP  1.6.1  Enable the OK button on the Database properties dialog
                       when the owner is changed, per Jim Cullison
 2006-11-15 DP  1.6.1  Prevent a crash if the 'View Filtered Data' filter dialog
